[tool.poetry]
name = "torch-simple-timing"
version = "0.1.3"
description = "A simple package to time CPU/GPU/Multi-GPU ops"
authors = ["vict0rsch <vsch@pm.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "torch_simple_timing"}]

[tool.poetry.dependencies]
python = "^3.8.1"
torch = ">=1.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
ipython = "^8.12.0"
sphinx = "^6.1.3"
myst-parser = "^1.0.0"
furo = "^2023.3.27"
sphinx-copybutton = "^0.5.1"
sphinx-autodoc-typehints = "^1.22"
sphinx-autoapi = "^2.1.0"
sphinx-math-dollar = "^1.2.1"
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
